still fixing alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,11 +50,11 @@ blockquote {
   min-height: 55.95px;
   position: relative; }
 
-.card-wrapper{
-  // margin-right:0px;
-  // width:10px;
-  margin: 0 auto;
-}
+// .card-wrapper{
+//   // margin-right:0px;
+//   // width:10px;
+//   margin: 0 auto;
+// }
 
 .card {
     /* Add shadows to create the "card" effect */
